--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,17 @@
+--- 
 abstract: Efficient transformation and delivery of web images
-author: Adam Kennedy <cpan@ali.as>
+author: 
+  - Adam Kennedy <adamk@cpan.org>
 build_requires: 
   IO::File: 0
+  Test::ClassAPI: 1.04
   Test::More: 0.47
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: Module::Install version 0.68
 license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: Image-Delivery
 no_index: 
   directory: 
@@ -22,4 +28,4 @@ requires:
   List::Util: 1.11
   Params::Coerce: 0.13
   perl: 5.005
-version: 0.13
+version: 0.14
